--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -17,10 +17,10 @@ h1 {
       <br><br>
       <img src="SGA2018.jpg" alt="photo of Julianne" width="300px">
       <ul>
-        <li><a href="mailto:juliannem@comcast.net"><juliannem@comcast.net</li>
-        <li><a href="LinkedIn: https://www.linkedin.com/in/julianneheberlein</li>
-        <li>Twitter: https://twitter.com/jmheberlein</li>
-        <li>GitHub: https://github.com/jmheberlein</li>
+        <li><a href="mailto:juliannem@comcast.net">juliannem@comcast.net</a></li>
+        <li><a href="https://www.linkedin.com/in/julianneheberlein">LinkedIn</a></li>
+        <li><a href="https://twitter.com/jmheberlein">Twitter</a></li>
+        <li><a href="https://github.com/jmheberlein">GitHub</a></li>
       </ul>
       <p>I am a junior at the University of Maryland, double majoring in multi-platform journalism and government and politics, with plans to pursue a career in political communication. Currently, I intern at NBC News for Chief Justice Correspondent Pete Williams, who covers the Supreme Court, Department of Justice and Department of Homeland Security. My passions include U.S. politics, women's empowerment and improving access to mental health resources.</p>
       <h2>Experience:</h2>
