--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -2,20 +2,16 @@
 
 <html lang="en">
 <head>
+  <link href="style.css" type="text/css" rel="stylesheet">
   <title> Julianne Heberlein's Resume</title>
-  <style type="text/css">
-h1 {
-  font-size:36px;
-  color:blue;
-}
-  </style>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <!--I built this myself!-->
   <body>
     <h1>Julianne Heberlein</h1>
       <strong>Journalism and Government Student</strong>
       <br><br>
-      <img src="SGA2018.jpg" alt="photo of Julianne" width="300px">
+      <!--<img src="SGA2018.jpg" alt="photo of Julianne" width="300px">!-->
       <ul>
         <li><a href="mailto:juliannem@comcast.net">juliannem@comcast.net</a></li>
         <li><a href="https://www.linkedin.com/in/julianneheberlein">LinkedIn</a></li>
