--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -8,48 +8,51 @@
 </head>
 <!--I built this myself!-->
   <body>
-    <h1>Julianne Heberlein</h1>
-      <strong>Journalism and Government Student</strong>
-      <br><br>
+    <div id="container">
+    <div id="name">Julianne Heberlein</div>
       <!--<img src="SGA2018.jpg" alt="photo of Julianne" width="300px">!-->
-      <ul>
+      <div class="menu">
         <li><a href="mailto:juliannem@comcast.net">juliannem@comcast.net</a></li>
         <li><a href="https://www.linkedin.com/in/julianneheberlein">LinkedIn</a></li>
         <li><a href="https://twitter.com/jmheberlein">Twitter</a></li>
         <li><a href="https://github.com/jmheberlein">GitHub</a></li>
-      </ul>
-      <p>I am a junior at the University of Maryland, double majoring in multi-platform journalism and government and politics, with plans to pursue a career in political communication. Currently, I intern at NBC News for Chief Justice Correspondent Pete Williams, who covers the Supreme Court, Department of Justice and Department of Homeland Security. My passions include U.S. politics, women's empowerment and improving access to mental health resources.</p>
-      <h2>Experience:</h2>
-        <h3>Judicial News Intern</h3>
-        <h4>NBC News</h4>
-        <h5>Jan. 2019 - Present</h5>
-        <p>I assist in production of legal and judicial news for NBC Nightly News and the Today Show, including coverage of the Supreme Court, Department of Justice and Department of Homeland Security. My responsibilities include logging transcripts, researching, assisting on shoots, obtaining rights for media distribution, cultivating sources and coordinating interviews for Chief Justice Correspondent Pete Williams.</p>
-        <h3>Communications Intern</h3>
-        <h4>Republican Governors Association</h4>
-        <h5>May 2018 - Aug. 2018</h5>
-        <p>I assisted with various aspects of the communications office, including creating press lists for all 36 states with gubernatorial elections in November, editing press materials for grammar and accuracy and transcribing lengthy interviews verbatim. I developed proficiency in different software like TV Eyes and Camtasia, which I used to create daily media clips, record and clip live-streamed debates and news broadcasts.</p>
-        <h3>External Relations Intern</h3>
-        <h4>U.S. Department of State</h4>
-        <h5>Jan. 2018 - May 2018</h5>
-        <p>I worked in the Office of the Under Secretary for Public Diplomacy and Public Affairs, where I created weekly reports on public diplomacy reports, upcoming events and Congressional hearings, summarized Senate Foreign Relations committee hearings for the Senior Advisor for External Relations, drafted action memos and briefing papers for the Under Secretary for Public Diplomacy and Public Affairs and managed registration for the Expo 2020 Dubai RFP Roadshow in six major cities.</p>
-        <h3>Press Intern</h3>
-        <h4>Office of Governor Larry Hogan</h4>
-        <h5>May 2017 - Aug. 2017</h5>
-        <p>I assisted the governor’s press office by analyzing digital engagement to enhance Governor Hogan’s communications strategy, conducting legislative and opposition research on relevant issues, helping the deputy press secretary with live streaming Governor Hogan's speeches and events and compiling press lists of reporters covering the State House and Maryland General Assembly.</p>
-        <h3>Public Affairs Intern</h3>
-        <h4>National Cancer Institute</h4>
-        <h5>June 2015 - Aug. 2016</h5>
-        <p>I helped the Director of Public Affairs manage the institutional newsletter and wrote 22 science articles and feature stories to highlight scientists’ research on colorectal cancer, mouse models and the MERS virus. Additionally, I edited press releases on research partnerships between the Frederick National Lab and private cancer centers. To advertise the internship program, I directed a video project to be used at local high school recruitment events.</p>
-      <h2>Education:</h2>
-        <ul>
+      </div>
+      <div class="title">Journalism and Government Student</div>
+      <br>
+      <div class="top">I am a junior at the University of Maryland, double majoring in multi-platform journalism and government and politics, with plans to pursue a career in political communication. Currently, I intern at NBC News for Chief Justice Correspondent Pete Williams, who covers the Supreme Court, Department of Justice and Department of Homeland Security. My passions include U.S. politics, women's empowerment and improving access to mental health resources.</div>
+      <!--This was h2 for experience!-->
+      <div class="sectionheader">Experience:</div>
+        <div class="jobtitle">Judicial News Intern</div>
+        <div class="organization">NBC News</div>
+        <div class="date">Jan. 2019 - Present</div>
+        <p class="description">I assist in production of legal and judicial news for NBC Nightly News and the Today Show, including coverage of the Supreme Court, Department of Justice and Department of Homeland Security. My responsibilities include logging transcripts, researching, assisting on shoots, obtaining rights for media distribution, cultivating sources and coordinating interviews for Chief Justice Correspondent Pete Williams.</p>
+        <div class="jobtitle">Communications Intern</div>
+        <div class="organization">Republican Governors Association</div>
+        <div class="date">May 2018 - Aug. 2018</div>
+        <p class="description">I assisted with various aspects of the communications office, including creating press lists for all 36 states with gubernatorial elections in November, editing press materials for grammar and accuracy and transcribing lengthy interviews verbatim. I developed proficiency in different software like TV Eyes and Camtasia, which I used to create daily media clips, record and clip live-streamed debates and news broadcasts.</p>
+        <div class="jobtitle">External Relations Intern</div>
+        <div class="organinzation">U.S. Department of State</div>
+        <div class="date">Jan. 2018 - May 2018</div>
+        <p class="description">I worked in the Office of the Under Secretary for Public Diplomacy and Public Affairs, where I created weekly reports on public diplomacy reports, upcoming events and Congressional hearings, summarized Senate Foreign Relations committee hearings for the Senior Advisor for External Relations, drafted action memos and briefing papers for the Under Secretary for Public Diplomacy and Public Affairs and managed registration for the Expo 2020 Dubai RFP Roadshow in six major cities.</p>
+        <div class="jobtitle">Press Intern</div>
+        <div class="organization">Office of Governor Larry Hogan</div>
+        <div class="date">May 2017 - Aug. 2017</div>
+        <p class="description">I assisted the governor’s press office by analyzing digital engagement to enhance Governor Hogan’s communications strategy, conducting legislative and opposition research on relevant issues, helping the deputy press secretary with live streaming Governor Hogan's speeches and events and compiling press lists of reporters covering the State House and Maryland General Assembly.</p>
+        <div class="jobtitle">Public Affairs Intern</div>
+        <div class="organization">National Cancer Institute</div>
+        <div class="date">June 2015 - Aug. 2016</div>
+        <p class="description">I helped the Director of Public Affairs manage the institutional newsletter and wrote 22 science articles and feature stories to highlight scientists’ research on colorectal cancer, mouse models and the MERS virus. Additionally, I edited press releases on research partnerships between the Frederick National Lab and private cancer centers. To advertise the internship program, I directed a video project to be used at local high school recruitment events.</p>
+        <div class="sectionheader">Education:</div>
+        <ul id="degrees">
           <li>Bachelor of Arts, Multi-Platform Journalism and Government & Politics, University of Maryland, Expected May 2020</li>
         </ul>
-      <h2>Skills:</h2>
-        <ul>
+      <div class="sectionheader">Skills:</div>
+        <ul id="do">
           <li>Social media: Experienced with Twitter, Facebook, Instagram, LinkedIn and Snapchat.</li>
           <li>Data analysis: Familiar with Microsoft Excel and Google Analytics.</li>
           <li>Writing: Experienced in different writing styles including news articles, feature stories, speeches and poetry.</li>
         </ul>
+      </div>
     </body>
 
 
