--- a/Resume/index.html
+++ b/Resume/index.html
@@ -11,12 +11,12 @@
     <div id="container">
     <div id="name">Julianne Heberlein</div>
       <!--<img src="SGA2018.jpg" alt="photo of Julianne" width="300px">!-->
-      <div class="menu">
-        <li><a href="mailto:juliannem@comcast.net">juliannem@comcast.net</a></li>
-        <li><a href="https://www.linkedin.com/in/julianneheberlein">LinkedIn</a></li>
-        <li><a href="https://twitter.com/jmheberlein">Twitter</a></li>
-        <li><a href="https://github.com/jmheberlein">GitHub</a></li>
-      </div>
+      <ul class="menu">
+        <li class="inline"><a href="mailto:juliannem@comcast.net">juliannem@comcast.net</a></li>
+        <li class="inline"><a href="https://www.linkedin.com/in/julianneheberlein">LinkedIn</a></li>
+        <li class="inline"><a href="https://twitter.com/jmheberlein">Twitter</a></li>
+        <li class="inline"><a href="https://github.com/jmheberlein">GitHub</a></li>
+      </ul>
       <div class="title">Journalism and Government Student</div>
       <br>
       <div class="top">I am a junior at the University of Maryland, double majoring in multi-platform journalism and government and politics, with plans to pursue a career in political communication. Currently, I intern at NBC News for Chief Justice Correspondent Pete Williams, who covers the Supreme Court, Department of Justice and Department of Homeland Security. My passions include U.S. politics, women's empowerment and improving access to mental health resources.</div>
