--- a/bootstrap-template.html
+++ b/bootstrap-template.html
@@ -11,6 +11,7 @@
 
 <!--Bootstrap CSS -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -53,12 +54,10 @@
 
 
     <!--Jumbotron-->
-    <div class="jumbotron">
- <h1 class="display-4">Julianne Heberlein</h1>
- <p class="lead">Journalism and Government student at the University of Maryland</p>
+    <div class="jumbotron" style="background-image: url(resume-banner.png);">
+
  <hr class="my-4">
- <p>Working to combine my passions for politics and media</p>
- <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+
 </div>
 <!--End jumbotron-->
 
