color and banner

--- a/personalwebsite/julianne-heberlein-resume.html
+++ b/personalwebsite/julianne-heberlein-resume.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
-<link rel="https://fonts.googleapis.com/css?family=Nunita+Sans" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 </head>
 
 <body>
@@ -48,12 +48,6 @@
     </nav>
     <!--End navbar-->
 
-
-    <!-- Jumbotron-->
-    <!-- <div class="jumbotron">
-
-    </div> -->
-<!--End jumbotron -->
 <img src="resume-banner.png" class="header">
 
 <div class="container">
