--- a/personalwebsite/julianne-heberlein-resume.html
+++ b/personalwebsite/julianne-heberlein-resume.html
@@ -66,19 +66,19 @@
         <div class="row" id="experience">
           <div class="col-md-10 offset-md-1">
                   <h3>Experience</h3>
-                  <div class="position"><b>NBC News | Judicial News Intern</b></div>
+                  <div class="position"><b><a href="https://www.nbcnews.com/">NBC News</a> | Judicial News Intern</b></div>
                   <div class="date"><i>Jan. 2019 - Present</i></div>
                   <p class="description">I assist in production of legal and judicial news for NBC Nightly News and the Today Show, including coverage of the Supreme Court, Department of Justice and Department of Homeland Security. My responsibilities include logging transcripts, researching, assisting on shoots, obtaining rights for media distribution, cultivating sources and coordinating interviews for Chief Justice Correspondent Pete Williams.</p>
-                  <div class="position"><b>Communications Intern | Republican Governors Association</b></div>
+                  <div class="position"><b><a href="https://www.rga.org/">Republican Governors Association</a> | Communications Intern</b></div>
                   <div class="date"><i>May 2018 - Aug. 2018</i></div>
                   <p class="description">I assisted with various aspects of the communications office, including creating press lists for all 36 states with gubernatorial elections in November, editing press materials for grammar and accuracy and transcribing lengthy interviews verbatim. I developed proficiency in different software like TV Eyes and Camtasia, which I used to create daily media clips, record and clip live-streamed debates and news broadcasts.</p>
-                  <div class="position"><b>U.S. Department of State | External Relations Intern</b></div>
+                  <div class="position"><b><a href="https://www.state.gov/">U.S. Department of State</a> | External Relations Intern</b></div>
                   <div class="date"><i>Jan. 2018 - May 2018</i></div>
                   <p class="description">I worked in the Office of the Under Secretary for Public Diplomacy and Public Affairs, where I created weekly reports on public diplomacy reports, upcoming events and Congressional hearings, summarized Senate Foreign Relations committee hearings for the Senior Advisor for External Relations, drafted action memos and briefing papers for the Under Secretary for Public Diplomacy and Public Affairs and managed registration for the Expo 2020 Dubai RFP Roadshow in six major cities.</p>
-                  <div class="position"><b>Office of Governor Larry Hogan | Press Intern</b></div>
+                  <div class="position"><b><a href="https://governor.maryland.gov/">Office of Governor Larry Hogan</a> | Press Intern</b></div>
                   <div class="date"><i>May 2017 - Aug. 2017</i></div>
                   <p class="description">I assisted the governor’s press office by analyzing digital engagement to enhance Governor Hogan’s communications strategy, conducting legislative and opposition research on relevant issues, helping the deputy press secretary with live streaming Governor Hogan's speeches and events and compiling press lists of reporters covering the State House and Maryland General Assembly.</p>
-                  <div class="position"><b>National Cancer Institute | Public Affairs Intern</b></div>
+                  <div class="position"><b><a href="https://www.cancer.gov/">National Cancer Institute</a> | Public Affairs Intern</b></div>
                   <div class="date"><i>June 2015 - Aug. 2016</i></div>
                   <p class="description">I helped the Director of Public Affairs manage the institutional newsletter and wrote 22 science articles and feature stories to highlight scientists’ research on colorectal cancer, mouse models and the MERS virus. Additionally, I edited press releases on research partnerships between the Frederick National Lab and private cancer centers. To advertise the internship program, I directed a video project to be used at local high school recruitment events.</p>
           </div>
@@ -126,6 +126,25 @@
           <div class="col-md-10 offset-md-1">
                   <h3>Contact Me</h3>
                   <p>If you'd like grab coffee or talk politics, shoot me an email at <a href="mailto:juliannem@comcast.net">juliannem@comcast.net</a> or connect with me on social media!</p>
+                  <div class="container">
+                    <form action="action_page.php">
+
+                      <label for="fname">First Name</label>
+                      <input type="text" id="fname" name="firstname" placeholder="Your name...">
+
+                      <label for="lname">Last Name</label>
+                      <input type="text" id="lname" name="lastname" placeholder="Your last name..."><br>
+
+                      <label for="email">Email Address</label>
+                      <input type="text" id="email" name="emailaddress" placeholder="Your email..."><br>
+
+                      <label for="subject">Subject</label>
+                      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea><br>
+
+                      <input type="submit" value="Submit"><br>
+
+                    </form>
+                  </div>
           </div>
         </div>
 </div>
@@ -134,8 +153,8 @@
     <div class="col-md-10 offset-md-1">
             <a href= "https://twitter.com/jmheberlein"><i class="fab fa-twitter-square"></i></a>
             <a href="https://www.facebook.com/profile.php?id=100011406514085&ref=bookmarks"><i class="fab fa-facebook-square"></i>
-            <a href="https://www.linkedin.com/in/julianneheberlein/"><i class="fab fa-linkedin"></i>
-            <p>Copyright Julianne Heberlein 2019</p>
+            <a href="https://www.linkedin.com/in/julianneheberlein/"><i class="fab fa-linkedin"></i></a>
+            <p>© Julianne Heberlein 2019</p>
     </div>
   </div>
 </footer>
