--- a/personalwebsite/julianne-heberlein-resume.html
+++ b/personalwebsite/julianne-heberlein-resume.html
@@ -63,6 +63,7 @@
                 </div>
               <button><a href="Julianne_Heberlein_Resume_2.pdf">Download Resume</a></button>
         </div>
+
         <div class="row" id="experience">
           <div class="col-md-10 offset-md-1">
                   <h3>Experience</h3>
@@ -82,6 +83,7 @@
                   <div class="date"><i>June 2015 - Aug. 2016</i></div>
                   <p class="description">I helped the Director of Public Affairs manage the institutional newsletter and wrote 22 science articles and feature stories to highlight scientists’ research on colorectal cancer, mouse models and the MERS virus. Additionally, I edited press releases on research partnerships between the Frederick National Lab and private cancer centers. To advertise the internship program, I directed a video project to be used at local high school recruitment events.</p>
           </div>
+
         </div>
         <div class="row" id="education">
           <div class="col-md-10 offset-md-1">
@@ -126,34 +128,15 @@
           <div class="col-md-10 offset-md-1">
                   <h3>Contact Me</h3>
                   <p>If you'd like grab coffee or talk politics, shoot me an email at <a href="mailto:juliannem@comcast.net">juliannem@comcast.net</a> or connect with me on social media!</p>
-                  <div class="container">
-                    <form action="action_page.php">
-
-                      <label for="fname">First Name</label>
-                      <input type="text" id="fname" name="firstname" placeholder="Your name...">
-
-                      <label for="lname">Last Name</label>
-                      <input type="text" id="lname" name="lastname" placeholder="Your last name..."><br>
-
-                      <label for="email">Email Address</label>
-                      <input type="text" id="email" name="emailaddress" placeholder="Your email..."><br>
-
-                      <label for="subject">Subject</label>
-                      <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea><br>
-
-                      <input type="submit" value="Submit"><br>
-
-                    </form>
-                  </div>
           </div>
         </div>
 </div>
 <footer>
   <div class="row">
-    <div class="col-md-10 offset-md-1">
-            <a href= "https://twitter.com/jmheberlein"><i class="fab fa-twitter-square"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100011406514085&ref=bookmarks"><i class="fab fa-facebook-square"></i>
-            <a href="https://www.linkedin.com/in/julianneheberlein/"><i class="fab fa-linkedin"></i></a>
+    <div class="col-md-10 offset-md-1" id="icons">
+            <a href= "https://twitter.com/jmheberlein"><i class="fab fa-twitter-square fa-2x"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=100011406514085&ref=bookmarks"><i class="fab fa-facebook-square fa-2x"></i>
+            <a href="https://www.linkedin.com/in/julianneheberlein/"><i class="fab fa-linkedin fa-2x"></i></a>
             <p>© Julianne Heberlein 2019</p>
     </div>
   </div>
