--- a/resume-project/julianne-heberlein-resume.html
+++ b/resume-project/julianne-heberlein-resume.html
@@ -59,7 +59,7 @@
         <div class="row" id="aboutme">
                 <div class="col-md-10 offset-md-1">
                         <h3>About Me</h3>
-                        <p>Hello! I am a junior jourmalism and government and politics major at the University of Maryland, originally from Clarksburg, MD. After graduating with my bachelor's degree in May 2020, I'll be pursuing a career in political communication so I can combine my interests in politics and media. Outside of the classroom, I'm passionate about advocating for better mental health resources and getting more women elected to public office.</p>
+                        <p>Hello! I am a junior journalism and government and politics major at the University of Maryland, originally from Clarksburg, MD. After graduating with my bachelor's degree in May 2020, I'll be pursuing a career in political communication so I can combine my interests in politics and media. Outside of the classroom, I'm passionate about advocating for better mental health resources and getting more women elected to public office.</p>
                 </div>
               <button><a href="Julianne_Heberlein_Resume_2.pdf">Download Resume</a></button>
         </div>
