--- a/html-frame/index.html
+++ b/html-frame/index.html
@@ -62,19 +62,21 @@
     <!--End navbar-->
 <div id="container">
 <p class= "headline">Headline goes here</p>
-<p class= "byline">By Byline</p>
+<p class= "byline">By Julianne Heberlein</p>
 <div id="h1">Chapter Header</div>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 <figure>
   <img src="ccbuilding.jpg" alt="University of Maryland Counseling Center Building">
-  <figcaption>The University of Maryland Counseling Center is located in the Shoemaker building on south campus.</figcaption>
+  <figcaption>The University of Maryland Counseling Center is located in the Shoemaker building on South Campus. <br>Image courtesy of UMD Division of Student Affairs.</figcaption>
 </figure>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 <footer>
   <div class="row">
     <div class="col-md-10 offset-md-1" id="footer">
-          <p>© Julianne Heberlein 2019</p>
+          <p>Footer text <br>© Julianne Heberlein 2019</p>
     </div>
   </div>
 </footer>
