--- a/data-viz/inclass-graphics.html
+++ b/data-viz/inclass-graphics.html
@@ -119,6 +119,7 @@
 <!-- END sixth graphic container-->
 <br><br>
 </div>
+<iframe src="https://uploads.knightlab.com/storymapjs/97d93884d49d417b145d9448e65e4131/shootings-map/index.html" frameborder="0" width="100%" height="800"></iframe>
 <!--Footer-->
 <footer>
   <div class="row">
